Agregar nuevos archivos y actualizar carpeta

--- a/Extraccion_Datos.ipynb
+++ b/Extraccion_Datos.ipynb
@@ -751,6 +751,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#filtro por cabecera\n",
+    "filtro5=df.head(2)\n",
+    "filtro5\n",
+    "\n",
+    "filtro5.to_csv(\"Entregable5.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [
